
6. listlinier.h & listlinier.c
	[DEPRECATED] dirubah menjadi list.h untuk menyesuaikan penamaan

7. list.h
	[NEW] Pengganti listlinier.h
	[NEW] nama struct untuk elemen diganti menjadi TListElement dengan typedef ListElement
	[UPDATE] Adjustment to convention

8. buildinglist.h
	[NEW] Sebagai list untuk menyimpan bangunan yang dimiliki player

9. actionstackt.h
	[NEW] Sebagai stack penyimpan history action player untuk keperluan Undo

10. mapmatrix.h
	[NEW] Sebagai representasi peta building, setiap elemen adalah index yang mengacu pada BuildingArray

<31/10/2019 17:00> by Ilham
1. point.h point.c
	[UPDATE] change tipe data dari komponen Point dari float menjadi integer

2. BuildingArray
	[DEPRECATED] fungsi BuildingArraySearchForBoolean, BuildingArrayCopyTab, BuildingArraySearchForIndex, IsBuildingArrayEQ, BuildingArrayPrintTab

<31/10/2019 22:27> by Ilham
1. buildingarray.h
	[UPDATE] no ; after #define

2. buildinglist.h
	[UPDATE] TListElement to TBuildingListElement

3. buildingarray.c
	[UPDATE] casting element saat create empty

4. buildinglist.c
	[NEW]

5. point.c
	[UPDATE] change name tipe data input & absis, ordinat

<1/11/2019 09:07> by Gunawan
1. buildinglist.h buildinglist.c
	[UPDATE] definisi BuildingListPrintInfo

<1/11/2019 10:40> by Gunawan
1. actionstackt.h
	[UPDATE] change stack element to GameMap

2. gamemap.h
	[NEW] untuk menyatukan BuildingArray MapMatrix Player dan BuildingRelationship

3. diagrams Folder
	[NEW] Seluruh flow di game akan dijabarkan di sini
	[UPDATE] Added Hierarchy ADT, Program Main FLow, Setup FLow, and Game Flow

4. FlowAlstrukdat.drawio
	[NEW] Diagram raw untuk flow

<1/11/2019 11:18> by Ilham
1. buildinglist.c
	[NEW] Implements BuildingListPrintInfo and BuildingListNbElmt

<1/11/2019 11:22> by Gunawan
1. building.h
	[UPDATE] change definition of BuildingResetStatus

2. diagrams
	[UPDATE] update program main flow, game flow, setup flow termination
	[UPDATE] added levelup flow and move flow (attack and skill are to be made)
